[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anti_qsweepy"
version = "0.1"
dependencies = [
  "jsonschema == 4.25.*",
  "matplotlib == 3.10.*",
  "nicegui == 2.22.*",
  "numpy == 2.3.*",
  "platformdirs == 4.3.*",
  "plotly == 5.24.*",
  "pyserial == 3.5",
  "python_can == 4.5.*",
  "PyVISA == 1.14.*",
  "pywin32 >= 305",
  "ruamel.yaml == 0.18.*",
  "scipy == 1.16.*",
  "tables == 3.10.*"
]
requires-python = ">=3.11"
authors = [
  {name = "Nikolay Abramov", email = "n-abram-n@yandex.ru"},
]
maintainers = [
  {name = "Nikolay Abramov", email = "n-abram-n@yandex.ru"}
]
description = "A simple measurement automation"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
keywords = ["visa", "measurement", "experiment", "automation", "qsweepy"]
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python"
]

[project.optional-dependencies]

[project.urls]
Repository = "https://github.com/NikolayAbramov/anti_qsweepy"

[project.scripts]
anti_qsweepy_setup = "anti_qsweepy.anti_qsweepy_setup:anti_qsweepy_setup"
impa_gui = "anti_qsweepy.routines.impa_gui.main:impa_giu_main"

#[project.gui-scripts]
#impa-gui = "anti_qsweepy.routines.impa_gui.main:impa_giu_main"

[tool.hatch.build.targets.wheel]
packages = ["src/anti_qsweepy"]